--- a/swp391.client/package.json
+++ b/swp391.client/package.json
@@ -25,6 +25,7 @@
     "@mui/x-data-grid": "^7.7.1",
     "@react-oauth/google": "^0.12.1",
     "antd": "^5.18.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^8.0.0",
