Fix some syntax, add admission record, save images to cloud

--- a/swp391.Server/PetHealthcare.Server.csproj
+++ b/swp391.Server/PetHealthcare.Server.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="secrets.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\swp391.client\pethealthcare.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
