Send qr in email

--- a/.gitignore
+++ b/.gitignore
@@ -399,5 +399,7 @@ FodyWeavers.xsd
 /swp391.Server/Core/DTOS/AdmissionRecordDTOs
 /.vscode
 .prettierrc
-swp391.client/.env
-swp391.Server/secrets.json
+/swp391.client/.env
+/swp391.Server/secrets.json
+/swp391.client/.env
+/swp391.Server/secrets.json
